--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,131 @@
 {
   "404.mess": "Sorry, the page you visited does not exist.",
-  "back": "Back"
+  "back": "Back",
+  "ai.content": "AI Content",
+  "social.media": "Social Media",
+  "media.management": "Media Management",
+  "post.schedule": "Post Schedule",
+  "traffic.grow.center": "Traffic Grow Center",
+  "setting": "Setting",
+  "language": "Language",
+  "how.do.you.want.AI.to.create.your.content?": "How Do You Want AI To Create Your Content?",
+  "train.my.social.media.agent": "Train my social media agent",
+  "let.chow.generate.automatically": "Let Chow generate automatically",
+  "AI.generate": "AI Generate",
+  "AI.generate.content": "AI will generate content based on the data you provide, along with sample content and initial foundations that shape the posts.",
+  "AI.generate.automatically": "AI generate automatically",
+  "AI.generate.automatically.content": "By analyzing your industry, target audience, and provided data, AI can craft engaging and relevant posts that align with your business type",
+  "posting.schedule": "Posting Schedule",
+  "plan.and.manage.your.social.media.content.in.one.place": "Plan and manage your social media content in one place",
+  "schedule.post": "Schedule Post",
+  "learn.how.to.schedule.post": "Learn how to schedule post",
+  "click.here.to.schedule.post": "Click here to schedule post",
+  "select.a.page.to.view.schedule.posts": "Select a page to view schedule posts: ",
+  "view.scheduled.posts": "View schedule posts",
+  "view.scheduled.posts.content": "Choose a page to view and manage scheduled posts, including their status, platform, and actions like edit or remove.",
+  "no.page.available": "No page available?",
+  "let.connect": "Let's connect",
+  "create.a.marketing.plan": "Create a Making Plan",
+  "change.AI.content.generation": "Change AI Content Generation",
+  "select.a.page": "-- Select a Page --",
+  "which.social.platform.do.you.want.AI.to.create.posts.for": "Which social platform do you want AI to create posts for?",
+  "advanced.settings": "Advanced Settings",
+  "business.type": "Business type: ",
+  "generate.post.content.AI": "Generate Post Content AI",
+  "which.pages.do.you.want.to.generate.for.the.marketing.plan?": "Which pages do you want to generate for the marketing plan?",
+  "welcome.to.your.marketing.strategy.assistant": "Welcome to Your Marketing Strategy Assistant!",
+  "hello...": "Hello! Welcome to our marketing strategy assistant. The information you provide will help us gather the basic details needed to create a tailored marketing plan for you. Let's get started!",
+  "let.get.started": "Let's Get Started!",
+  "manage.your.pages.with.an.App.ID": "Manage your pages with an App ID.",
+  "social.media.management": "Social Media Management",
+  "learn.how.to.set.it.up": "Learn how to set it up!",
+  "social.app.ID": "Social App ID",
+  "enter.your.app.ID.social.media": "Enter your App ID social media",
+  "connect": "Connect",
+  "select.a.default.facebook.page": "Select a default Facebook page",
+  "enter.your.business.type": "Enter your Business Type",
+  "save": "Save",
+  "manage.AI.content": "Manage AI Content",
+  "manage.AI.content.content": "Leverage AI tools to generate, manage, and optimize content for marketing, promotions, and customer engagement",
+  "manage.social.media": "Manage Social Media",
+  "manage.social.media.content": "Organize and manage affiliate links to increase revenue through partnerships and collaborations",
+  "manage.traffic.grow.center": "Manage Traffic Grow Center",
+  "what.a.beautiful.day": "What a Beautiful Day",
+  "what.a.beautiful.day.content": "Adjust content settings, including permissions, preferences, and system configurations, to enhance content management efficiency",
+  "setting.step1": "Step 1: Visit The Facebook Developers Page",
+  "setting.step2": "Step 2: Input Your New App’s Information",
+  "setting.step3": "Step 3: Add Products In Your App",
+  "setting.step4": "Step 4: Set Up Your Product",
+  "setting.step5": "Step 5: Make Your App Live",
+  "previous": "Previous",
+  "next": "Next",
+  "done": "Done",
+  "schedule": "Schedule",
+  "view": "View",
+  "update": "Update",
+  "delete": "Delete",
+  "month": "Month",
+  "day": "Day",
+  "today": "Today",
+  "empty.toast": "This Field Isn't Empty",
+  "save.successfully": "Save Successfully",
+  "which.option.would.you.like.to.choose": "Which option would you like to choose",
+  "schedule.AI.generated.post": "Schedule AI-Generated Post",
+  "schedule.AI.generated.post.content": "Option to retrieve the AI-generated article content for you",
+  "create.and.schedule.a.new.post": "Create and Schedule a New Post",
+  "create.and.schedule.a.new.post.content": "Option to create content in your own way",
+  "which.social.platform.do.you.want.to.schedule.posts.for": "Which social platform do you want to schedule posts for?",
+  "schedule.fb.post": "Schedule Facebook Post",
+  "schedule.in.post": "Schedule Instagram Post",
+  "select.page": "Select Page",
+  "content": "Content: ",
+  "image.url": "Image URL",
+  "input.content": "Input Content",
+  "paste": "Paste ",
+  "posting.time": "Posting Time",
+  "the.character...": " The character count is limited to",
+  "...character": "character. Character count: ",
+  "upload.new.content": "Upload New Content",
+  "optional": "(optional)",
+  "simple.content": "Simple Content",
+  "simple.content.content": "Make content using the template you uploaded!",
+  "click.or.drag.file.upload": "Click or drag file upload",
+  "PDF.only": "PDF Only",
+  "login.successful": "Login Successfully !",
+  "please.enter.a.valid.app.ID.": "Please enter a valid App ID.",
+  "login.cancelled.or.invalid.app.ID": "Login cancelled or invalid App ID",
+  "login.now": "Login Now",
+  "please.login": "Your session has expired, please log in again.",
+  "get.list.post.social.media": "Get List Post Social Media",
+  "fb.page": "Facebook Pages: ",
+  "in.page": "Instagram Pages: ",
+  "select.page.fb": "Select Page's Facebook",
+  "select.page.in": "Select Page's Instagram",
+  "input.url.blog": "Input URL's Blog",
+  "this.feature.is.under.development": "This Feature is under development !",
+  "submit": "Submit",
+  "posts.detail": "Posts Detail: ",
+  "no.": "No.",
+  "uploaded.file.info": "uploaded File Info",
+  "file.name": "File Name",
+  "character.count": "Character Count",
+  "your.social.media.post": " Your social media post... ",
+  "marketing.plan.generated.successfully": "Marketing Plan generated successfully !",
+  "error.generating.marketing.plan": "Error generating marketing plan !",
+  "estimated.generation.time": "Estimated Generation Time: ",
+  "minutes": "Minutes",
+  "cancel": "Cancel",
+  "select.a.post": "Select a Post",
+  "no.post": "You don't have any post AI yet ?",
+  "create.now": "Create Now",
+  "created.successfully": "Created Successfully !",
+  "post.successfully": "Post Successfully !",
+  "post.fail": "Post Failed !",
+  "time.must.10.minutes.later": "Time must 10 minutes later !",
+  "list.schedule.post": "List Schedule Post",
+  "no.picture": "No picture",
+  "content.is.required": "Content is Required !",
+  "delete.successfully": "Delete Successfully !",
+  "delete.fail": "Delete Fail !",
+  "deleting": "Deleting ..."
 }
