--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -127,5 +127,30 @@
   "content.is.required": "Content is Required !",
   "delete.successfully": "Delete Successfully !",
   "delete.fail": "Delete Fail !",
-  "deleting": "Deleting ..."
+  "deleting": "Deleting ...",
+  "AI.canvas": "AI Creative Space",
+  "AI.canvas.content": "Harness the power of AI to design, test, and develop products, content, and new ideas quickly and efficiently.",
+  "knowledge": " Knowledge",
+  "search.knowledge.base": "Search Knowledge Base",
+  "search.your.knowledge.base": "Search Your Knowledge Base",
+  "no.posts.in.knowledge.base.yet": "No posts in knowledge base yet",
+  "import.generated.posts.to.build.your.knowledge.base": "Import generated posts to build your knowledge base",
+  "import.external.posts": "Import External Posts",
+  "this.is.prompt.guide...": "This prompt guides the AI in generating marketing content for your brand.",
+  "system.prompt": "System Prompt",
+  "branch.voice": "Branch Voice",
+  "branch.voice.place.holder": "Professional, Friendly, Casual...",
+  "target.audience": "Target Audience",
+  "target.audience.place.holder": "18-24, Professionals, Parents...",
+  "generated.posts": "Generated Posts",
+  "posts": "Post(s)",
+  "export": "Export",
+  "welcome.to.chow.AI.canvas": "Welcome to Chow AI Canvas",
+  "start.a...": "Start a conversation with the AI to generate marketing content for your social media campaigns.",
+  "enter.message": "Enter message ...",
+  "add.successfully": "Add Successfully !",
+  "no.posts.generated.yet": "No posts generated yet",
+  "edit.post": "Edit Post",
+  "save.changes": "Save Changes",
+  "export.successfully": "Export Successfully !"
 }
