--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -127,5 +127,30 @@
   "content.is.required": "Nội Dung là Bắt buộc !",
   "delete.successfully": "Xóa Thành Công !",
   "delete.fail": "Xóa Thất Bại !",
-  "deleting": "Đang Xóa ..."
+  "deleting": "Đang Xóa ...",
+  "AI.canvas": "Không Gian Làm Việc Cùng AI",
+  "AI.canvas.content": "Tận dụng sức mạnh của AI để thiết kế, thử nghiệm và phát triển sản phẩm, nội dung và ý tưởng mới một cách nhanh chóng và hiệu quả.",
+  "knowledge": " Kiến Thức",
+  "search.knowledge.base": "Tìm Kiếm Cơ Sở Tri Thức",
+  "search.your.knowledge.base": "Tìm Kiếm Cơ Sở Tri Thức Của Bạn",
+  "no.posts.in.knowledge.base.yet": "Chưa có bài viết nào trong cơ sở tri thức",
+  "import.generated.posts.to.build.your.knowledge.base": "Nhập các bài viết đã tạo để xây dựng cơ sở tri thức",
+  "import.external.posts": "Nhập Bài Post Bên Ngoài",
+  "this.is.prompt.guide...": "Prompt này hướng dẫn AI tạo nội dung tiếp thị cho thương hiệu của bạn.",
+  "system.prompt": "Hướng Dẫn Hệ Thống",
+  "branch.voice": "Giọng điệu thương hiệu",
+  "branch.voice.place.holder": "Chuyên nghiệp, Thân thiện, Bình dân...",
+  "target.audience": "Đối tượng mục tiêu",
+  "target.audience.place.holder": "18-24 tuổi, Người đi làm, Phụ huynh...",
+  "generated.posts": "Tạo Bài Đăng",
+  "posts": "Bài Đăng",
+  "export": "Xuất",
+  "welcome.to.chow.AI.canvas": "Chào mừng đến với Chow AI Canvas",
+  "start.a...": " Bắt đầu cuộc trò chuyện với AI để tạo nội dung marketing cho các chiến dịch truyền thông xã hội của bạn.",
+  "enter.message": "Nhập tin nhắn ...",
+  "add.successfully": "Thêm Thành Công !",
+  "no.posts.generated.yet": "Chưa có bài viết nào ",
+  "edit.post": "Chỉnh Sửa Bài Viết",
+  "save.changes": "Lưu Thay Đổi",
+  "export.successfully": "Xuất File Thành Công !"
 }
